--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
-.idea/**/dictionaries
+# .idea/**/dictionaries
 .idea/**/shelf
 
 # Generated files
@@ -75,9 +75,9 @@ fabric.properties
 ### Intellij+iml Patch ###
 # Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
 
-*.iml
-modules.xml
-.idea/misc.xml
+# *.iml
+# modules.xml
+# .idea/misc.xml
 *.ipr
 
 ### Python ###
@@ -186,3 +186,5 @@ dmypy.json
 .pyre/
 
 # End of https://www.gitignore.io/api/python,intellij+iml
+
+Pipfile.lock
